# node-modules-sanitaizer

./: .gitignore  .npmignore  Cargo.toml  LICENSE  NPM_PUBLISHING.md  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
scripts/: build-npm.sh  publish-npm.sh
src/: analyzer.rs  cleaner.rs  config.rs  main.rs
