[package]
name = "node_modules_sanitaizer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
glob = "0.3.2"
fs_extra = "1.3"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.8"
bytesize = "2.0.1"
comfy-table = "7.1.4"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[[bin]]
name = "npz"
path = "src/main.rs"